Update sales section